--- a/viz/index.html
+++ b/viz/index.html
@@ -14,6 +14,15 @@
   pointer-events: none;
 }
 
+.state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
 </style>
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -36,7 +45,12 @@ d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
 
   svg.append("path")
       .attr("class", "county-borders")
-      .attr("d", path(topojson.mesh(us, us.objects.counties, function(a, b) { return a !== b; })));
+      .attr("d", path(topojson.mesh(us, us.objects.counties, function(a, b) { return a !== b; })))
+      .attr("id", function(d){console.log(d); return d.id;});
+
+  svg.append("path")
+      .attr("class", "state-borders")
+      .attr("d", path(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; })));
 });
 
 </script>
