--- a/ProfHacks18/Sprinkle.html
+++ b/ProfHacks18/Sprinkle.html
@@ -315,8 +315,8 @@
 
             colorAxis: {
                 min: 0, 
-                minColor: '#7c7856',
-                maxColor: '#267f0b',
+                minColor: '#d6c58d',
+                maxColor: '#0cd15b',
             },
 
             series: [{
@@ -324,7 +324,7 @@
                 name: 'Moisture',
                 states: {
                     hover: {
-                        color: '#9ba5b5'
+                        color: 'rgb(34, 61, 97)'
                     }
                 },
                 dataLabels: {
@@ -356,8 +356,8 @@
 
             colorAxis: {
                 min: 0, 
-                minColor: '#bcbcbc',
-                maxColor: '#d18ab3',
+                minColor: '#eae1e5',
+                maxColor: '#f268a8',
             },
 
             series: [{
@@ -365,7 +365,7 @@
                 name: 'Frequency',
                 states: {
                     hover: {
-                        color: '#9ba5b5'
+                        color: 'rgb(34, 61, 97)'
                     }
                 },
                 dataLabels: {
@@ -397,8 +397,8 @@
 
             colorAxis: {
                 min: 0, 
-                minColor: '#b2a677',
-                maxColor: '#7ca6ff',
+                minColor: '#c5c8c9',
+                maxColor: '#46a8d6',
             },
 
             series: [{
@@ -406,7 +406,7 @@
                 name: 'Thirst',
                 states: {
                     hover: {
-                        color: '#9ba5b5'
+                        color: 'rgb(34, 61, 97)'
                     }
                 },
                 dataLabels: {
